# OmnissaSolutionCoPilot

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
output/: question_flowchart.html
scripts/: build_image_captions_v3.py  classify_image_records.py  enrich_visual_flags.py  eval_image_selection.py  inspect_techzone_page.py  inspect_techzone_sitemap.py
src/sa_hld_bot/: __init__.py  agents.py  azure_foundry.py  catalog.py  config.py  diagram_qa.py  docx_builder.py  embeddings.py  feedback.py  guardrails.py  hld_followup.py  image_context.py  image_followup.py  image_pipeline.py  image_select.py  logging_utils.py  optimization.py  ppt_builder.py  rag.py  sessions.py  techzone_client.py
tests/: test_chat_fragment_structure.py  test_diagram_qa.py  test_uploaded_diagram_rag.py
