[tool.poetry]
name = "sa-hld-bot"
version = "0.1.0"
description = "Solution Architect HLD Co-pilot — Streamlit app for generating High-Level Design documents"
authors = ["Anunta"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
streamlit = ">=1.56.0"
python-pptx = ">=1.0.2"
python-docx = ">=1.1.2"
requests = ">=2.32.0"
beautifulsoup4 = ">=4.12.0"
lxml = ">=6.0.0"
chromadb = ">=1.0.0"
openai = ">=1.61.0"
pydantic = ">=2.11.0"
dspy-ai = ">=2.6.0"
llmlingua = ">=0.2.2"
tiktoken = ">=0.9.0"
python-dotenv = ">=1.0.1"
sentence-transformers = ">=3.3.0"
torchvision = ">=0.26.0"
playwright = ">=1.52.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry-core.masonry.api"
